--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,36 @@
 {
-  "name": "silinternational/idp-id-broker-php-client",
-  "type": "library",
-  "description": "PHP client to interact with our IdP ID Broker's API: https://github.com/silinternational/idp-id-broker",
-  "keywords": ["idp", "id broker", "api", "php client"],
-  "license": "MIT",
-  "require": {
-    "php": ">=7.0",
-    "guzzlehttp/guzzle-services": "^1.1",
-    "roave/security-advisories": "dev-master",
-    "rlanvin/php-ip": "^1.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^6.0",
-    "behat/behat": "^3.3"
-  },
-  "authors": [
-    {
-      "name": "Phillip Shipley",
-      "email": "phillip_shipley@sil.org"
-    },
-    {
-      "name": "Matt Henderson",
-      "email": "matt_henderson@sil.org"
-    }
-  ],
-  "autoload": {
-    "psr-4": {
-      "Sil\\Idp\\IdBroker\\Client\\": "src/",
-      "Sil\\Idp\\IdBroker\\Client\\features\\": "features/",
-      "Sil\\Idp\\IdBroker\\Client\\tests\\": "tests/"
-    }
-  }
+	"name" : "silinternational/idp-id-broker-php-client",
+	"type" : "library",
+	"description" : "PHP client to interact with our IdP ID Broker's API: https://github.com/silinternational/idp-id-broker",
+	"keywords" : [
+		"idp",
+		"id broker",
+		"api",
+		"php client"
+	],
+	"license" : "MIT",
+	"require" : {
+		"php" : ">=7.0",
+		"guzzlehttp/guzzle-services" : "^1.1",
+		"rlanvin/php-ip" : "^1.0"
+	},
+	"require-dev" : {
+		"phpunit/phpunit" : "^6.0",
+		"behat/behat" : "^3.3"
+	},
+	"authors" : [{
+			"name" : "Phillip Shipley",
+			"email" : "phillip_shipley@sil.org"
+		}, {
+			"name" : "Matt Henderson",
+			"email" : "matt_henderson@sil.org"
+		}
+	],
+	"autoload" : {
+		"psr-4" : {
+			"Sil\\Idp\\IdBroker\\Client\\" : "src/",
+			"Sil\\Idp\\IdBroker\\Client\\features\\" : "features/",
+			"Sil\\Idp\\IdBroker\\Client\\tests\\" : "tests/"
+		}
+	}
 }
